# 1d-mctdhb

./: .gitignore  .python-version  CMakeLists.txt  README.md  den-movie.py  init.py  job.conf  makefile  mcanalysis.py  pyproject.toml  seed.py
apps/: mctdhb_main.c
config_files_example/: mctdhb_extra.txt  mctdhb_integrator.txt
exe/: time_evolution.c
include/: MCTDHB_datatype.h  MCTDHB_integrator.h  MCTDHB_observables.h  array.h  array_memory.h  array_operations.h  auxIntegration.h  calculus.h  coeffIntegration.h  configurationalSpace.h  dataStructures.h  data_structure.h  data_structures.h  imagtimeIntegrator.h  inout.h  integrator_routine.h  integrators.h  iterative_solver.h  linearPartIntegration.h  linear_potential.h  manybody_configurations.h  matrix_operations.h  mctdhb_types.h  memoryHandling.h  new_imagint.h  observables.h  orbTimeDerivativeDVR.h  realtimeIntegrator.h  structureSetup.h  tridiagonal_solver.h
misc/: doubleWellSep.py
multiconfpy/: __init__.py  configurational_space.py  density_matrices.py  dynamics.py  function_tools.py  observables.py  operator_action.py  stationary.py
py_module/: assistant.py  configurational_space.py  density_matrices.py  stationary_analysis.py
pysrc/: MCTDHBinit.py
scripts/: den-movie.py  initial_condition.py
src/: CMakeLists.txt  MCTDHB_datatype.c  MCTDHB_integrator.c  MCTDHB_observables.c  array_memory.c  array_operations.c  auxIntegration.c  calculus.c  coeffIntegration.c  configurationalSpace.c  data_structure.c  imagtimeIntegrator.c  inout.c  integrator_routine.c  integrators.c  interpolation.c  iterative_solver.c  linearPartIntegration.c  linear_potential.c  manybody_configurations.c  matrix_operations.c  memoryHandling.c  new_imagint.c  observables.c  orbTimeDerivativeDVR.c  orb_dvr_backup.c  realtimeIntegrator.c  structureSetup.c  tridiagonal_solver.c
src/assistant/: arrays_definition.c  data_setup.c  dataio.c  datastructs_definition.c  domain_resize.c  integrator_monitor.c  synchronize.c  types_definition.c
src/configurational/: density_matrices.c  hamiltonian.c  space.c
src/function_tools/: builtin_potential.c  builtin_time_parameter.c  calculus.c  interpolation.c  orbital_matrices.c
src/integrator/: coefficients_integration.c  driver.c  nonlinear_orbitals.c  orbital_integration.c  split_linear_orbitals.c  split_nonlinear_orbitals.c  synchronize.c
src/linalg/: basic_linalg.c  lapack_interface.c  multiconfig_lanczos.c  tridiagonal_solver.c
tests/: array.h  exec  performance.c  (+2 more)
(+28 files in other folders)
