[tool.poetry]
name = "multiconfpy"
version = "0.1.0"
description = "Auxiliar package for mctdhb package"
authors = ["Alex Andriati <andriati.alex@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8.5"
numpy = "^1.20.0"
matplotlib = "^3.3.4"
numba = "^0.53.1"
scipy = "^1.6.3"
tqdm = "^4.61.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 79
