[tool.poetry]
name = "multiconfpy"
version = "0.1.0"
description = "Auxiliar package for mctdhb package"
authors = ["Alex Andriati <andriati.alex@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9.5"
numpy = "^1.20.3"
matplotlib = "^3.5.1"
numba = "^0.54.1"
scipy = "^1.7.3"
tqdm = "^4.61.1"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 79
